Bug 121116 - Arrow width is abnormally taken into account
Summary: Arrow width is abnormally taken into account
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2018-11-02 07:40 UTC by Pierre C
Modified: 2018-11-09 07:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pierre C 2018-11-02 07:40:39 UTC
Easy to reproduce

1 - Launch Draw
2 - Add an arrow
3 - By right-click, choose Line
4 - Look at the arrow width, it should be 0.3 cm
5 - change the arrow width from 0 to 0.1 cm
6 - Look at arrow width it should have increased by 0.15 from 0.3 to 0.45
7 - Change the arrow size to whatever value you want or don't change it and close by OK
8 - Right click to line and look to the arrow width. The value is 0.15 more than what it was

Expected behaviour :
- The arrow width should be at the value left when clicking on OK
Comment 1 Mike Kaganski 2018-11-02 08:42:40 UTC
Reproducible with Version: 6.1.3.2 (x64)
Build ID: 86daf60bf00efa86ad547e59e09d6bb77c699acb
CPU threads: 12; OS: Windows 10.0; UI render: GL; 
Locale: ru-RU (ru_RU); Calc: CL
Comment 2 Mike Kaganski 2018-11-02 08:54:10 UTC
Not reproducible with Version 4.0.0.3 (Build ID: 7545bee9c2a0782548772a21bc84a9dcc583b89)

Reproducible with Version: 4.1.0.4
Build ID: 89ea49ddacd9aa532507cbf852f2bb22b1ace28

Suspect dialog rework regression.
Comment 3 Pierre C 2018-11-02 13:51:02 UTC
Same Problem with AOO 4.1.5
Comment 4 Aron Budea 2018-11-07 21:48:01 UTC
Bibisected to the following range using repo bibisect-41max. It's a single commit in the bibisect build, as the skipped commits failed to build.
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=d8d55787b81cdc955b73c8befa4ab608f46e32aa..6b412f8bb1397fe18e5213549c50839879206eb7
Comment 5 Aron Budea 2018-11-07 21:49:19 UTC
(In reply to Pierre C from comment #3)
> Same Problem with AOO 4.1.5
Must be caused by one of the commits ported from AOO in that range, then.
Comment 7 Commit Notification 2018-11-09 07:26:15 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/9d93e030288aaa721761cb7991d1afdde6335777%5E%21

tdf#121116: don't adapt start/end widths if they are set explicitly

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Mike Kaganski 2018-11-09 07:28:31 UTC
Let's call it fixed.