tdf#121116: don't adapt start/end widths if they are set explicitly

after commit b8fe3f84a60ea73aed9748844aee80441eb0fc7d
    Related: #i122121# moved automatic StartEnd adaption to svx

Change-Id: Ic4639834ffa55d110f232fbad5f140a8e76df3e9